# dine-sync-pos-rust

./: .gitignore  composer.json
app/Models/: Category.php  Expense.php  (+18 more)
bootstrap/: app.php
docs/: CUTOVER.md  DEPLOY-VPS.md  RUST_MIGRATION_PLAN.md
routes/: auth.php  web.php
rust/: installer.iss  package.ps1  smoke-test.ps1
rust/crates/central/: Cargo.toml  dev.ps1
rust/crates/central/src/: audit.rs  auth.rs  customer.rs  finance.rs  kasir.rs  kitchen.rs  logactivity.rs  main.rs  master.rs  midtrans.rs  queue.rs  rbac.rs  realtime.rs  report.rs  shift.rs  stock.rs  sync.rs  usermgmt.rs  view.rs
rust/crates/central/templates/: dashboard.html  sync.html
rust/crates/central/templates/auth/: login.html
rust/crates/central/templates/customer/: menu.html  qr.html  scan.html  success.html
rust/crates/central/templates/finance/: expenses.html
rust/crates/central/templates/help/: log_activity.html
rust/crates/central/templates/kasir/: index.html  order.html  print.html  shift.html  table_detail.html
rust/crates/central/templates/kitchen/: index.html
rust/crates/central/templates/layout/: app.html  footer.html  menu.html  sidebar.html
rust/crates/central/templates/master/: categories.html  ingredients.html  menus.html  promos.html  settings.html  suppliers.html  tables.html
rust/crates/central/templates/queue/: admin.html  display.html  kiosk.html
rust/crates/central/templates/reports/: items.html  sales.html
rust/crates/central/templates/stock/: ledger.html  opname.html  opname_print.html  recipe.html  recipes.html  stocks.html
rust/crates/central/templates/usermgmt/: account.html  roles.html  users.html
(+117 files in other folders)
