[package]
name = "central"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
bcrypt = "0.19.1"
dotenvy = "0.15.7"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.5"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "rust_decimal", "sqlite"] }
tera = "1.20.1"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["v4"] }
